# acreetionos-flasher

./: .gitignore  README.md  generate-editions.js  package-lock.json  package.json
.github/workflows/: build.yml  test-flasher.yml
src/: index.html  script.js  styles.css
src-tauri/: Cargo.toml  editions.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: editions.rs  lib.rs  main.rs
